--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <!-- ******************** Navbar Section ******************** -->
-    <header class="mt-0 position-sticky top-0 z-2 bg_color navBar_border">
+    <header class="mt-0 position-sticky top-0 z-2 bg_color navBar_border overflow-hidden">
         <nav class="py-2 py-md-3 ">
             <div class="myContainer">
                 <div class="d-flex align-items-center justify-content-between">
