--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="myContainer position-relative z-1">
             <div class="d-flex justify-content-center flex-column min-h-hero">
                 <div class="row justify-content-center py-5 py-lg-0">
-                    <div class="col-lg-3 col-md-5 mt-3 mt-lg-0 order-1 order-lg-0">
+                    <div class="col-lg-3 col-md-5 mt-4 mt-lg-0 order-1 order-lg-0">
                         <div class="d-flex justify-content-lg-end justify-content-center ">
                             <div class="hover position-relative">
                                 <img src="/assets/image/png/header_mobile.png" alt="header_img" class="hero_mobile">
@@ -173,7 +173,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-5 mt-3 d-none d-md-block mt-lg-0 order-2">
+                    <div class="col-lg-3 col-md-5 mt-4 d-none d-md-block mt-lg-0 order-2">
                         <div class="d-flex justify-content-center justify-content-lg-start">
                             <div class="hover2 position-relative">
                                 <img src="/assets/image/png/header_mobile2.png" alt="header_img"
@@ -453,7 +453,7 @@
     </section>
     <!-- ******************** Help Section ******************** -->
     <section class="bg_gradian py-lg-5 overflow-hidden" id="help">
-        <div class="myContainer py-5" >
+        <div class="myContainer py-5">
             <h2 class="text-center ff_primary letter_spacing fs_xl fw_bold color_secondary">How We Can Help You</h2>
             <div class="row justify-content-center pt-32">
                 <div class="col-12 col-lg-4 col-sm-6">
@@ -597,7 +597,7 @@
                     </p>
                 </div>
             </div>
-            <div class="py-32">
+            <div class="py-sm-32">
                 <div class="row py-32">
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <ul class=" ps-0 mb-0">
@@ -627,13 +627,15 @@
                                     Resources</a></li>
                             <li class="pt-10 d-flex align-items-center"><a href="#"
                                     class="ff_primary fw_medium fs_xs color_gray lineHover">Careers
-                                    </a>
+                                </a>
                                 <a href="#" class="d-flex align-items-center">
-                                    <span class="footerBox"><svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <span class="footerBox"><svg width="8" height="8" viewBox="0 0 8 8" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="4" cy="4" r="3" fill="#007AFF" />
                                         </svg>
                                         We’re Hiring!</span>
-                                </a></li>
+                                </a>
+                            </li>
                             <li class="pt-10"><a href="#"
                                     class="ff_primary fw_medium fs_xs color_gray lineHover">Pricing</a>
                             </li>
@@ -690,12 +692,14 @@
                             <li class="pt-10 d-flex align-items-center"><a href="#"
                                     class="ff_primary fw_medium fs_xs color_gray lineHover">Telesales
                                 </a>
-                            <a href="#" class="d-flex align-items-center">
-                                <span class="footerBox"><svg width="8" height="8" viewBox="0 0 8 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <circle cx="4" cy="4" r="3" fill="#007AFF" />
-                                    </svg>
-                                New Feature!</span>
-                            </a></li>
+                                <a href="#" class="d-flex align-items-center">
+                                    <span class="footerBox"><svg width="8" height="8" viewBox="0 0 8 8" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <circle cx="4" cy="4" r="3" fill="#007AFF" />
+                                        </svg>
+                                        New Feature!</span>
+                                </a>
+                            </li>
                             <li class="pt-10"><a href="#" class="ff_primary fw_medium fs_xs color_gray lineHover">Custom
                                     Dashboards</a>
                             </li>
@@ -764,7 +768,7 @@
                 </div>
             </div>
             <div class="py-32 borderFooter1">
-                <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
+                <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                     <ul class="mb-0 ps-0 d-flex gap-8 gap-md-10">
                         <li class="ff_primary fs_xs fw_medium color_gray letter_spacing">©2023 - Repforce</li>
                         <li class="line"></li>
@@ -781,7 +785,7 @@
                         <li class="line"></li>
                         <li class="ff_primary fs_xs fw_medium color_gray letter_spacing">Privacy Policy</li>
                     </ul>
-                    <ul class="mb-0 ps-0 d-flex gap-20 pt-3 pt-md-0">
+                    <ul class="mb-0 ps-0 d-flex gap-20 pt-3 pt-lg-0 me-lg-5 pe-lg-3 pe-xxl-0 me-xxl-0">
                         <li>
                             <a href="https://in.indeed.com/" target="/">
                                 <img src="/assets/image/svg/indeed.svg" alt="indeed" class="linkHover">
@@ -808,7 +812,7 @@
         </div>
     </footer>
     <!-- ******************** Back to Top ******************** -->
-    <div id="back-to-top">
+    <div id="back-to-top" class="hidden">
         <div class="d-flex justify-content-center align-items-center back-to-top">
             <svg width="19" height="21" viewBox="0 0 19 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
