spelling mistak in preloader

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="./assets/image/png/IconTag.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>RepFroce</title>
+    <title>RepForce</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/Root.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <div id="box" class="overflow-hidden">
         <div id="preloader-box" class="d-flex flex-column justify-content-center">
             <img class="mx-auto loder-img" src="./assets/image/png/loder.png" alt="preloder" />
-            <p class="fs_xl fw_extraBold color_white mb-0 pt-4">Welcome to Repfroce</p>
+            <p class="fs_xl fw_extraBold color_white mb-0 pt-4">Welcome to Repforce</p>
         </div>
     </div>
     <!-- ******************** Navbar Section ******************** -->
