bootstrap padding add

--- a/index.html
+++ b/index.html
@@ -334,11 +334,11 @@
         <div class="myContainer py-5">
             <h3 class="ff_primary text-center mb-0 fs_xl fw_semiBold letter_spacing1 color_secondary">Why You’ll <span
                     class="color_primary">Love Us</span></h3>
-            <div class="row justify-content-center pt-32">
+            <div class="row justify-content-center pt-4 mt-2">
                 <div class="col-lg-4 col-sm-6">
                     <div class="loveCard borderCard1 transition p-32" data-aos="fade-right">
                         <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
-                        <h4 class="pt-32 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
+                        <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
                         <p class="mb-0 py-4 ff_primary fs_xs fw_medium letter_spacing color_gray">Lorem ipsum dolor sit
@@ -356,7 +356,7 @@
                 <div class="col-lg-4 col-sm-6 mt-4 mt-sm-0">
                     <div class="loveCard borderCard2 transition p-32" data-aos="flip-left">
                         <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
-                        <h4 class="pt-32 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
+                        <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
                         <p class="mb-0 py-4 ff_primary fs_xs fw_medium letter_spacing color_gray">Lorem ipsum dolor sit
@@ -374,7 +374,7 @@
                 <div class="col-lg-4 col-sm-6 mt-4 mt-lg-0">
                     <div class="loveCard borderCard3 transition p-32" data-aos="fade-left">
                         <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
-                        <h4 class="pt-32 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
+                        <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
                         <p class="mb-0 py-4 ff_primary fs_xs fw_medium letter_spacing color_gray">Lorem ipsum dolor sit
@@ -405,7 +405,7 @@
                         streamlining <span class="d-xl-block">
                             operations, boosting productivity, and driving remarkable sales
                         </span> growth</p>
-                    <div class="pt-32">
+                    <div class="pt-4 mt-2">
                         <div class="py-xl-32">
                             <div class="d-flex align-items-center">
                                 <div class="search d-flex justify-content-center align-items-center">
@@ -419,7 +419,7 @@
                                 opportunities and address customer needs promptly.</p>
                         </div>
                     </div>
-                    <div class="pt-32">
+                    <div class="pt-4 mt-2">
                         <div class="py-xl-32">
                             <div class="d-flex align-items-center">
                                 <div class="search d-flex justify-content-center align-items-center">
@@ -455,7 +455,7 @@
     <section class="bg_gradian py-lg-5 overflow-hidden" id="help">
         <div class="myContainer py-5">
             <h2 class="text-center ff_primary letter_spacing fs_xl fw_bold color_secondary">How We Can Help You</h2>
-            <div class="row justify-content-center pt-32">
+            <div class="row justify-content-center pt-4 mt-2">
                 <div class="col-12 col-lg-4 col-sm-6">
                     <div class="bg_img1 overflow-hidden position-relative" data-aos="fade-right"
                         data-aos-easing="ease-out-cubic">
@@ -510,7 +510,7 @@
             <h3 class="ff_primary fw_semiBold fs_xl letter_spacing1 color_secondary mb-0 text-center">Articles &
                 Resources
             </h3>
-            <div class="d-grid gap-20 pt-32">
+            <div class="d-grid gap-20 pt-4 mt-2">
                 <div class="grid_1 position-relative imgHover" data-aos="fade-right">
                     <img src="./assets/image/png/grid_1.png" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-32 gridCard">
@@ -587,7 +587,7 @@
     <!-- ******************** Footer Section ******************** -->
     <footer>
         <div class="myContainer">
-            <div class="py-32 borderFooter">
+            <div class="py-4 my-2 borderFooter">
                 <div class="d-flex flex-column flex-sm-row justify-content-between align-items-sm-center">
                     <img src="./assets/image/png/MainLogo.png" alt="logo" class="footerLogo">
                     <p class="text-sm-end ff_primary color_gray fs_xs fw_medium mb-0 pt-3 pt-sm-0">Supercharge your
@@ -598,7 +598,7 @@
                 </div>
             </div>
             <div class="py-sm-32">
-                <div class="row py-32">
+                <div class="row py-4 my-2">
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <ul class=" ps-0 mb-0">
                             <li class="ff_primary fw_bold fs_3md letter_spacing25 color_secondary">Our Product</li>
@@ -767,7 +767,7 @@
                     </div>
                 </div>
             </div>
-            <div class="py-32 borderFooter1">
+            <div class="py-4 my-2 borderFooter1">
                 <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
                     <ul class="mb-0 ps-0 d-flex gap-8 gap-md-10">
                         <li class="ff_primary fs_xs fw_medium color_gray letter_spacing">©2023 - Repforce</li>
