mb-0 add in sucess and kpi text bootstrap auto mb

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                 <div class="search d-flex justify-content-center align-items-center">
                                     <img src="./assets/image/svg/search.svg" alt="search">
                                 </div>
-                                <h4 class="ff_primary fs_md fw_semiBold color_secondary ps-20">Real-Time Insights</h4>
+                                <h4 class="ff_primary fs_md fw_semiBold color_secondary ps-20 mb-0">Real-Time Insights</h4>
                             </div>
                             <p class="ff_primary mb-0 fs_sm fw_regular color_gray letter_spacing2 pt-2 pt-sm-3 pt-lg-4">
                                 Make informed
@@ -425,7 +425,7 @@
                                 <div class="search d-flex justify-content-center align-items-center">
                                     <img src="./assets/image/svg/kpi.svg" alt="search">
                                 </div>
-                                <h4 class="ff_primary fs_md fw_semiBold color_secondary ps-20">KPI Setting & Monitoring
+                                <h4 class="ff_primary fs_md fw_semiBold color_secondary ps-20 mb-0">KPI Setting & Monitoring
                                 </h4>
                             </div>
                             <p class="ff_primary mb-0 fs_sm fw_regular color_gray letter_spacing2 pt-2 pt-sm-3 pt-lg-4">
@@ -454,7 +454,7 @@
     <!-- ******************** Help Section ******************** -->
     <section class="bg_gradian py-lg-5 overflow-hidden" id="help">
         <div class="myContainer py-5">
-            <h2 class="text-center ff_primary letter_spacing fs_xl fw_bold color_secondary">How We Can Help You</h2>
+            <h2 class="text-center ff_primary letter_spacing fs_xl fw_bold color_secondary mb-0">How We Can Help You</h2>
             <div class="row justify-content-center pt-4 mt-2">
                 <div class="col-12 col-lg-4 col-sm-6">
                     <div class="bg_img1 overflow-hidden position-relative" data-aos="fade-right"
