--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                                     Demo</button></li>
                         </ul>
                     </div>
-                    <label class="menu">
+                    <div class="menu">
                         <span class="span1"></span>
                         <span class="span2"></span>
                         <span class="span3"></span>
-                    </label>
+                    </div>
                     <div class="d-none d-lg-block">
                         <div class="d-flex justify-content-center align-items-center gap-10">
                             <button type="button"
