--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="icon" type="image/png" href="./assets/image/png/IconTag.png">
+    <link rel="icon" type="image/png" href="./assets/image/png/IconTag.webp">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RepForce</title>
@@ -20,7 +20,7 @@
     <!--  ******************** Preloder ******************** -->
     <div id="box" class="overflow-hidden">
         <div id="preloader-box" class="d-flex flex-column justify-content-center">
-            <img class="mx-auto loder-img" src="./assets/image/png/loder.png" alt="preloder" />
+            <img class="mx-auto loder-img" src="./assets/image/png/loder.webp" alt="preloder" />
             <p class="fs_xl fw_extraBold color_white mb-0 pt-4">Welcome to Repforce</p>
         </div>
     </div>
@@ -31,7 +31,7 @@
                 <div class="d-flex align-items-center justify-content-between">
                     <div class="d-flex align-items-center">
                         <a href="#" class="text-decoration-none d-flex align-items-center z-1000">
-                            <img src="./assets/image/png//MainLogo.png" alt="logo" class="mainLogo">
+                            <img src="./assets/image/png//MainLogo.webp" alt="logo" class="mainLogo">
                         </a>
                         <ul class="d-lg-flex pl-0 ps-60 align-items-center mb-0 gap-40 gap-max-20 mobileView">
                             <li class="nav-item"><a href="#feature"
@@ -101,19 +101,19 @@
     </header>
     <!-- ******************** Hero Section ******************** -->
     <section class="bg_hero overflow-hidden position-relative">
-        <img src="/assets/image/png/section_img2.png" alt="section_img2"
+        <img src="/assets/image/png/section_img2.webp" alt="section_img2"
             class="position-absolute section_img2 d-none d-md-block">
         <div class="circle1 d-none d-sm-block"></div>
         <div class="circle2 d-none d-sm-block"></div>
-        <img src="/assets/image/png/section_img1.png" alt="section_img1" class="position-absolute end-0">
+        <img src="/assets/image/png/section_img1.webp" alt="section_img1" class="position-absolute end-0">
         <div class="myContainer position-relative z-1">
             <div class="d-flex justify-content-center flex-column min-h-hero">
                 <div class="row justify-content-center py-5 py-lg-0">
                     <div class="col-lg-3 col-md-5 mt-4 mt-lg-0 order-1 order-lg-0">
                         <div class="d-flex justify-content-lg-end justify-content-center ">
                             <div class="hover position-relative">
-                                <img src="/assets/image/png/header_mobile.png" alt="header_img" class="hero_mobile">
-                                <img src="./assets/image/png/header_img1.png" alt="header_img1"
+                                <img src="/assets/image/png/header_mobile.webp" alt="header_img" class="hero_mobile">
+                                <img src="./assets/image/png/header_img1.webp" alt="header_img1"
                                     class="position-absolute peopeImg">
                                 <div
                                     class="hero_box1 position-absolute d-flex justify-content-center align-items-center">
@@ -138,9 +138,9 @@
                                 </div>
                                 <div class="position-absolute header_img4">
                                     <div class="position-relative">
-                                        <img src="/assets/image/png/header_img2.png" alt="header_img2"
+                                        <img src="/assets/image/png/header_img2.webp" alt="header_img2"
                                             class="header_img2">
-                                        <img src="/assets/image/png/header_img3.png" alt="header_img3"
+                                        <img src="/assets/image/png/header_img3.webp" alt="header_img3"
                                             class="header_img3">
                                     </div>
                                 </div>
@@ -176,11 +176,11 @@
                     <div class="col-lg-3 col-md-5 mt-4 d-none d-md-block mt-lg-0 order-2">
                         <div class="d-flex justify-content-center justify-content-lg-start">
                             <div class="hover2 position-relative">
-                                <img src="/assets/image/png/header_mobile2.png" alt="header_img"
+                                <img src="/assets/image/png/header_mobile2.webp" alt="header_img"
                                     class="hero_mobile1 transition">
                                 <img src="/assets/image/svg/pink.svg" alt="pink"
                                     class="position-absolute pinkImg transition">
-                                <img src="/assets/image/png/header_img5.png" alt="pink"
+                                <img src="/assets/image/png/header_img5.webp" alt="pink"
                                     class="position-absolute header_img5 transition">
                                 <div
                                     class="locationBox transition position-absolute d-flex justify-content-center align-items-center">
@@ -188,9 +188,9 @@
                                 </div>
                                 <div class="position-absolute header_img9 transition">
                                     <div class="position-relative">
-                                        <img src="/assets/image/png/header_img7.png" alt="header_img"
+                                        <img src="/assets/image/png/header_img7.webp" alt="header_img"
                                             class="header_img8 position-relative">
-                                        <img src="/assets/image/png/header_img6.png" alt="header_img"
+                                        <img src="/assets/image/png/header_img6.webp" alt="header_img"
                                             class="header_img6 transition position-absolute">
                                     </div>
                                 </div>
@@ -203,8 +203,8 @@
     </section>
     <!-- ******************** Navigation Section ******************** -->
     <section class="py-5 position-relative" id="feature">
-        <img src="/assets/image/png/section_img3.png" alt="section_img2" class="position-absolute section_img3 end-0">
-        <img src="/assets/image/png/section_img4.png" alt="section_img2" class="position-absolute section_img4">
+        <img src="/assets/image/png/section_img3.webp" alt="section_img2" class="position-absolute section_img3 end-0">
+        <img src="/assets/image/png/section_img4.webp" alt="section_img2" class="position-absolute section_img4">
         <div class="myContainer bg_imgSection py-lg-5 position-relative z-1 overflow-hidden">
             <div class="row align-items-center justify-content-center">
                 <div class="col-md-4">
@@ -271,7 +271,7 @@
                 </div>
                 <div class="col-9 py-3 py-md-0 my-1 my-md-0 col-md-4">
                     <div class="d-flex justify-content-center" data-aos="zoom-in">
-                        <img src="/assets/image/png/Mobile.png" alt="mobile" class="Mobile">
+                        <img src="/assets/image/png/Mobile.webp" alt="mobile" class="Mobile">
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -337,7 +337,7 @@
             <div class="row justify-content-center pt-4 mt-2">
                 <div class="col-lg-4 col-sm-6">
                     <div class="loveCard borderCard1 transition p-32" data-aos="fade-right">
-                        <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
+                        <img src="/assets//image/png/Cricle_img1.webp" alt="Cricle_img1" class="circleImg transition">
                         <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
@@ -355,7 +355,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-4 mt-sm-0">
                     <div class="loveCard borderCard2 transition p-32" data-aos="flip-left">
-                        <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
+                        <img src="/assets//image/png/Cricle_img1.webp" alt="Cricle_img1" class="circleImg transition">
                         <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
@@ -373,7 +373,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mt-4 mt-lg-0">
                     <div class="loveCard borderCard3 transition p-32" data-aos="fade-left">
-                        <img src="/assets//image/png/Cricle_img1.png" alt="Cricle_img1" class="circleImg transition">
+                        <img src="/assets//image/png/Cricle_img1.webp" alt="Cricle_img1" class="circleImg transition">
                         <h4 class="pt-4 mt-2 mb-0 ff_primary fs_md fw_semiBold color_secondary">Sharon Cunningham</h4>
                         <p class="mb-0 pt-1 ff_primary fs_xs fw_medium letter_spacing color_dark">Job Title/Company Name
                         </p>
@@ -438,13 +438,13 @@
                     data-aos="fade-left">
                     <div class="d-grid gap-20">
                         <div class="grid-1 br-25 overflow-hidden">
-                            <img src="/assets/image/png/Img_success1.png" alt="success" class="w-100 transition br-25">
+                            <img src="/assets/image/png/Img_success1.webp" alt="success" class="w-100 transition br-25">
                         </div>
                         <div class="grid-2 br-25 overflow-hidden">
-                            <img src="/assets/image/png/Img_success2.png" alt="success" class="w-100 transition br-25">
+                            <img src="/assets/image/png/Img_success2.webp" alt="success" class="w-100 transition br-25">
                         </div>
                         <div class="grid-3 br-25 overflow-hidden">
-                            <img src="/assets/image/png/Img_success3.png" alt="success" class="w-100 transition br-25">
+                            <img src="/assets/image/png/Img_success3.webp" alt="success" class="w-100 transition br-25">
                         </div>
                     </div>
                 </div>
@@ -459,7 +459,7 @@
                 <div class="col-12 col-lg-4 col-sm-6">
                     <div class="bg_img1 overflow-hidden position-relative" data-aos="fade-right"
                         data-aos-easing="ease-out-cubic">
-                        <img src="/assets/image/png/Img_men1.png" alt="Img_men"
+                        <img src="/assets/image/png/Img_men1.webp" alt="Img_men"
                             class="man_img position-absolute transition">
                         <div class="parapadiing z-1 position-relative">
                             <h3 class="ff_primary fs_md fw_bold color_white mb-0">For Companies</h3>
@@ -474,9 +474,9 @@
                 <div class="col-12 col-lg-4 col-sm-6 pt-4 pt-sm-0">
                     <div class="bg_img2 overflow-hidden position-relative" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic">
-                        <img src="/assets/image/png/Moble1.png" alt="Img_men"
+                        <img src="/assets/image/png/Moble1.webp" alt="Img_men"
                             class="man_img1 position-absolute transition">
-                        <img src="/assets/image/png/Moble2.png" alt="Img_men"
+                        <img src="/assets/image/png/Moble2.webp" alt="Img_men"
                             class="man_img2 position-absolute transition">
                         <div class="parapadiing z-1 position-relative">
                             <h3 class="ff_primary fs_md fw_bold color_white mb-0">For Companies</h3>
@@ -490,7 +490,7 @@
                 <div class="col-12 col-lg-4 col-sm-6 pt-4 pt-lg-0">
                     <div class="bg_img3 overflow-hidden position-relative" data-aos="fade-left"
                         data-aos-easing="ease-out-cubic">
-                        <img src="/assets/image/png/Moble3.png" alt="Img_men"
+                        <img src="/assets/image/png/Moble3.webp" alt="Img_men"
                             class="man_img3 position-absolute transition">
                         <div class="parapadiing z-1 position-relative">
                             <h3 class="ff_primary fs_md fw_bold color_white mb-0">For Companies</h3>
@@ -512,7 +512,7 @@
             </h3>
             <div class="d-grid gap-20 pt-4 mt-2">
                 <div class="grid_1 position-relative imgHover" data-aos="fade-right">
-                    <img src="./assets/image/png/grid_1.png" alt="grid_img" class="w-100 h-100 br-15">
+                    <img src="./assets/image/png/grid_1.webp" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-32 gridCard">
                         <h4 class="ff_primary fs_2md color_white fw_semiBold mb-1 letter_spacing24">Leveraging a
                             learning management system to enhance sales rep training
@@ -526,7 +526,7 @@
                     </div>
                 </div>
                 <div class="grid_2 position-relative imgHover" data-aos="fade-up">
-                    <img src="./assets/image/png/grid_2.png" alt="grid_img" class="w-100 h-100 br-15">
+                    <img src="./assets/image/png/grid_2.webp" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-3 gridCard">
                         <h4 class="ff_primary fs_md color_white fw_semiBold mb-0">Harnessing the Power of Cloud-Based
                             Solutions with Repforce
@@ -540,7 +540,7 @@
                     </div>
                 </div>
                 <div class="grid_3 position-relative imgHover" data-aos="flip-left">
-                    <img src="./assets/image/png/grid_3.png" alt="grid_img" class="w-100 h-100 br-15">
+                    <img src="./assets/image/png/grid_3.webp" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-3 gridCard">
                         <h4 class="ff_primary fs_md color_white fw_semiBold mb-0">Empowering Field Reps with Efficient
                             Route Management
@@ -554,7 +554,7 @@
                     </div>
                 </div>
                 <div class="grid_4 position-relative imgHover" data-aos="fade-down">
-                    <img src="./assets/image/png/grid_4.png" alt="grid_img" class="w-100 h-100 br-15">
+                    <img src="./assets/image/png/grid_4.webp" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-3 gridCard">
                         <h4 class="ff_primary fs_md color_white fw_semiBold mb-0">The Advantages of Custom Tasks &
                             Surveys in SFA Systems
@@ -568,7 +568,7 @@
                     </div>
                 </div>
                 <div class="grid_5 position-relative imgHover" data-aos="flip-left">
-                    <img src="./assets/image/png/grid_5.png" alt="grid_img" class="w-100 h-100 br-15">
+                    <img src="./assets/image/png/grid_5.webp" alt="grid_img" class="w-100 h-100 br-15">
                     <div class="p-3 gridCard">
                         <h4 class="ff_primary fs_md color_white fw_semiBold mb-0">Empowering Field Reps with Efficient
                             Route Management
@@ -589,7 +589,7 @@
         <div class="myContainer">
             <div class="py-4 my-2 borderFooter">
                 <div class="d-flex flex-column flex-sm-row justify-content-between align-items-sm-center">
-                    <img src="./assets/image/png/MainLogo.png" alt="logo" class="footerLogo">
+                    <img src="./assets/image/png/MainLogo.webp" alt="logo" class="footerLogo">
                     <p class="text-sm-end ff_primary color_gray fs_xs fw_medium mb-0 pt-3 pt-sm-0">Supercharge your
                         operations with mobile <span class="d-sm-block d-md-inline">field team software and
                             real-time</span>
