--- a/index.html
+++ b/index.html
@@ -56,13 +56,7 @@
                                     class=" bg-transparent border-0 ff_primary fs_xs fw_medium letter_spacing color_btn btn_header lineHoverBtn">Sign
                                     In</button></li>
                             <li class="d-lg-none"><button type="button"
-                                    class="btn-inline hoverEffect ff_primary fs_xs fw_semiBold letter_spacing">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    class="btn-inline ff_primary fs_xs fw_semiBold letter_spacing">
                                     Book
                                     Demo</button></li>
                         </ul>
@@ -83,13 +77,8 @@
                                 In</button>
 
                             <button type="button"
-                                class="btn-inline ff_primary fs_xs fw_semiBold letter_spacing hoverEffect">
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
-                                <span></span>
+                                class="btn-inline ff_primary fs_xs fw_semiBold letter_spacing ">
+
                                 Book
                                 Demo</button>
                         </div>
@@ -158,13 +147,8 @@
                             </p>
                             <div class="d-flex justify-content-center gap-20 gap-md-26 pt-37">
                                 <button type="button"
-                                    class="btn-inline hoverEffect ff_primary fs_xs fw_semiBold letter_spacing">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
+                                    class="btn-inline ff_primary fs_xs fw_semiBold letter_spacing">
+
                                     Book
                                     Demo</button>
                                 <button type="button" class="btn-inline1 ff_primary fs_xs fw_semiBold letter_spacing">
